--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,27 @@ form div {
   margin: auto;
 }
 
+.pagination-button-black {
+  margin: 0 5px 50px 5px;
+  background-color: white;
+  border: none;
+  outline: none;
+  font-weight: bold;
+}
+
+.pagination-button-grey {
+  margin: 0 5px 50px 5px;
+  background-color: white;
+  border: none;
+  outline: none;
+  color: grey;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
 /* SINGLE PRODUCT */
 .single-product-grid {
   display: grid;
