--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,13 @@ form div {
 }
 
 /* ALL PRODUCTS */
+.filter-sort {
+  display: flex;
+}
+
+select {
+  margin: 0 30px 0 5px;
+}
 .all-products-grid {
   display: grid;
   padding: 4rem 2rem;
