--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,25 @@ a {
   color: inherit;
 }
 
+h1 {
+  text-align: center;
+  margin: 0 auto;
+  padding: 1em 0 0.5em 0;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: white;
+}
+
 label {
   display: block;
+}
+
+nav {
+  margin-left: 20px;
 }
 
 nav a {
@@ -21,21 +38,58 @@ form div {
   display: inline-block;
 }
 
+select {
+  margin-left: 0.5em;
+}
+
 .text-align-center {
   text-align: center;
+}
+
+#app {
+  position: relative;
+}
+
+/* NAV BAR */
+.fas {
+  position: absolute;
+  top: 1.5em;
+  left: 1.5em;
+  font-size: 1.5em;
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  .fas {
+    display: block;
+  }
+  nav {
+    display: none;
+  }
+  #app .filter-sort {
+    justify-content: center;
+    position: sticky;
+    top: 5em;
+  }
 }
 
 /* ALL PRODUCTS */
 .filter-sort {
   display: flex;
+  padding: 1em;
+  position: sticky;
+  top: 9em;
+  background-color: white;
 }
 
-select {
-  margin: 0 30px 0 5px;
+.filter-sort-item {
+  display: flex;
+  margin: 1em;
 }
+
 .all-products-grid {
   display: grid;
-  padding: 4rem 2rem;
+  padding: 2rem;
   gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
@@ -43,7 +97,7 @@ select {
 .all-products-card {
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  padding: 1em;
   justify-content: center;
   background-color: #fafafa;
 }
