updated sticky nav bar

--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,7 @@ nav {
 
 nav a {
   display: inline-block;
-  margin: 1em;
+  margin: 0.5em 1em;
 }
 
 form div {
@@ -63,7 +63,8 @@ select {
   .fas {
     display: block;
   }
-  nav {
+  nav,
+  hr {
     display: none;
   }
   #app .filter-sort {
@@ -76,9 +77,9 @@ select {
 /* ALL PRODUCTS */
 .filter-sort {
   display: flex;
-  padding: 1em;
+  padding: 0 1em 1em 1em;
   position: sticky;
-  top: 9em;
+  top: 8em;
   background-color: white;
 }
 
@@ -89,7 +90,7 @@ select {
 
 .all-products-grid {
   display: grid;
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
   gap: 1rem;
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
 }
