--- a/public/style.css
+++ b/public/style.css
@@ -59,6 +59,10 @@ select {
   outline: none;
 }
 
+.flex {
+  display: flex;
+}
+
 /* NAV BAR */
 .flex-column {
   display: flex;
@@ -268,7 +272,7 @@ input {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #d0d0d0;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .continue {
@@ -301,4 +305,51 @@ input {
 .final {
   font-size: 1.25em;
   font-weight: bold;
+}
+
+.item {
+  background-color: #fafafa;
+  display: flex;
+  justify-content: space-between;
+  margin: 1em 0;
+}
+
+.item-img {
+  width: 8em;
+  padding: 1em;
+}
+
+.item-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 1.5em 2em;
+}
+
+.item-info h3 {
+  margin-block-end: 0em;
+}
+
+.qty {
+  width: 1.5em;
+  text-align: center;
+  border-radius: 5px;
+  background-color: white;
+  border: 1px solid black;
+  padding: 0.5em;
+  margin: 0.5em 0.5em 0.5em 0;
+}
+
+.qty-and-price {
+  display: flex;
+}
+
+.item-total {
+  margin: 3.5em 2em;
+  align-self: end;
+}
+
+.totals {
+  border-top: 1px solid #d0d0d0;
+  margin-top: 2em;
 }
