--- a/public/style.css
+++ b/public/style.css
@@ -331,7 +331,7 @@ input {
 }
 
 .qty {
-  width: 1.5em;
+  width: 2em;
   text-align: center;
   border-radius: 5px;
   background-color: white;
@@ -366,5 +366,8 @@ input {
   }
   .item-total {
     margin: 0 auto;
+  }
+  .item-img {
+    padding: 1em 1em 0 1em;
   }
 }
