added plus and minus qty buttons

--- a/public/style.css
+++ b/public/style.css
@@ -57,7 +57,7 @@ select {
   padding: 12px 30px;
   font-weight: bold;
   outline: none;
-  transition: 0.2s all;
+  transition: 0.1s all;
 }
 
 .button:active {
@@ -336,6 +336,10 @@ input {
   margin-block-end: 0em;
 }
 
+.price {
+  margin-block-start: 0em;
+}
+
 .qty {
   width: 2em;
   text-align: center;
@@ -348,6 +352,7 @@ input {
 
 .qty-and-price {
   display: flex;
+  flex-direction: column;
 }
 
 .item-total {
@@ -358,6 +363,14 @@ input {
 
 .fa-times-circle {
   margin: auto 0 auto 1em;
+}
+
+.fa-minus-square {
+  margin: auto 0.5em auto 0;
+}
+
+.fa-plus-square {
+  margin: auto 0.5em;
 }
 
 .totals {
