--- a/public/style.css
+++ b/public/style.css
@@ -401,3 +401,49 @@ input {
     padding: 1em 1em 0 1em;
   }
 }
+
+/* CHECKOUT */
+.checkout-form {
+  width: 100%;
+}
+
+.checkout-row {
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 0;
+}
+
+.checkout-row-2,
+.checkout-row-3 {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.checkout-row-2 div {
+  width: 30%;
+}
+
+.checkout-row-3 div {
+  width: 47.5%;
+}
+
+.checkout-form input {
+  margin: 0.5em 0;
+}
+
+.checkout-form select {
+  margin: 0 auto;
+}
+
+.checkout-form div {
+  margin: 0 0 0.5em 0;
+}
+
+.checkout-form span {
+  color: grey;
+}
+
+.checkout-form button {
+  margin-top: 3em;
+}
