updated navbar to include navlink

--- a/public/style.css
+++ b/public/style.css
@@ -91,6 +91,10 @@ select {
   display: none;
 }
 
+.selected {
+  font-weight: bold;
+}
+
 @media screen and (max-width: 480px) {
   .fa-bars,
   .fa-times {
