--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,7 @@ header {
   top: 0;
   width: 100%;
   background-color: white;
+  z-index: 100;
 }
 
 label {
@@ -76,6 +77,10 @@ select {
 
 .text-align-start {
   text-align: start;
+}
+
+.text-align-center {
+  text-align: center;
 }
 
 /* NAV BAR */
@@ -135,6 +140,39 @@ select {
   #app .filter-sort {
     justify-content: center;
   }
+}
+
+/* HOME */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.slides {
+  display: none;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 /* ALL PRODUCTS */
