implemented search bar

--- a/public/style.css
+++ b/public/style.css
@@ -536,3 +536,10 @@ input {
   padding-bottom: 1em;
   margin-bottom: 3em;
 }
+
+/* ALL PRODUCTS */
+.search {
+  display: flex;
+  justify-content: center;
+  margin: 2em auto;
+}
