--- a/public/style.css
+++ b/public/style.css
@@ -543,3 +543,31 @@ input {
   justify-content: center;
   margin: 2em auto;
 }
+
+/* MODAL */
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 50px;
+  z-index: 1000;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 1000;
+}
+
+.modal-button {
+  margin: 1em;
+}
