--- a/public/style.css
+++ b/public/style.css
@@ -218,6 +218,10 @@ select {
   background-color: #fafafa;
 }
 
+.all-products-card:hover {
+  border: solid 1px darkgoldenrod;
+}
+
 .all-products-img {
   height: 200px;
   width: 200px;
